--- a/index.Rmd
+++ b/index.Rmd
@@ -229,3 +229,36 @@ capita and year. As seen in Table 5, if only chance would have affected their ch
 
 The same reasoning, but opposite, goes for high income countries under the carbon budget per capita and year. 0 observations were made compared to around 12 expected, i.e. the individual chi square value of 12.00 should be interpreted as high income countries emitted under the carbon budget per capita and year less than expected.
 Upper middle income countries emitted under the carbon budget less than expected (obs. 3, exp. ~11) whereas lower middle income countries emitted under the carbon budget more than expected (obs. 21, exp. ~11). Low income countries emitted over the carbon budget less than expected (obs. 9, exp. ~22), so did lower middle income countries (obs. 32, exp. ~42). High income countries (obs. 57, exp. ~45) and upper middle income countries (obs. 52, exp. ~41) both emitted over the carbon budget more than expected.
+
+## Discussion
+This section will discuss the methodology, the findings, and draw conclusions.
+
+### Choice of Data
+This report focuses on total GHG emissions per country. If instead GHG emission per capita for each country would have been chosen the results may have had another outcome. Also, the chosen data does not consider within-country inequalities in income. It is possible that there are huge emitters in low-income countries and low emitters in high-income countries.
+
+Additionally, it is not known how the total GHG emission is calculated, and which country the emission is recorded in when it comes to offshore consumption (export), same goes for tourism and other activities performed by individuals living in another country from where the emission is being produced.
+
+### Result
+The Wilcoxon rank-sum test in part 2 of this report and the Kruskal-Wallis rank sum test in part 3 gave different results. Considering the same data for low-income and high-income countries was used, either the Wilcoxon rank-sum test should have indicated that there was no significant difference between the income groups. Or, the Kruskal-Wallis rank sum test should have shown that there was a significant difference between at least two groups, and post-hoc would have shown that there was a difference between high-income and low-income countries in terms of GHG emissions. However, observing the boxplots of the two parts, Figure 3 (boxplot for part 2) shows it is likely to be a difference as the median line of the high-income box lies outside of the low-income box entirely. The same goes for the boxes in Figure 4 (boxplot for part 3).
+
+Hence, the opposing test results might be due to how the different tests work. Although they are both non-parametric tests, maybe the Wilcoxon rank-sum test is less sensitive than the Kruskal-Wallis rank sum test. It is also possible that the difference between the tests might be because the data was transformed in part 3, but not in part 2. Regardless, this is a topic for further research.
+
+### Conclusion
+*Q1. Has the total greenhouse gas emissions globally per year increased from 1990 to 2019?*
+
+Yes. Based on the sample, the total GHG emissions globally per year increased from 1990 to 2019. It was found that the year significantly predicted the total emission of GHGs ($\beta$ = 0.0079, p = < .001), using the regression model $log_{10}(GHG \; emission) = 0.0079(year) − 8.3$. The regression was statistically significant (R2 = .97, F(28, 1) = 1122, p < .001).
+
+*Q2. Was there a difference in greenhouse gas emissions between low-income and high-income countries in 2019?*
+
+Yes. There was a significant difference between the groups in terms of median greenhouse gas emission in 2019 (W=1040, p = .024, $\eta_{high}$=57, $\eta_{low}$=28 Wilcoxon’s rank-sum test). The median greenhouse gas emission in the high-income group was 60 590kt, whereas the median greenhouse gas emission in the low-income group was 29 110kt. Based on the medians, high-income countries released more than twice, 31 480kt, more greenhouse gases than low-income countries.
+
+*Q3. Was there a difference in greenhouse gas emissions between the income groups low, lower middle, upper middle, and high income in 2019?*
+
+No. Significant differences in greenhouse gas emissions during 2019 were not observed
+between countries in the four income groups, high income (Mdn=60590), upper middle
+income (Mdn=21915), lower middle income (Mdn=30530), and low income (Mdn=29110)
+($\chi^2$(3)=4.891, p=.18, Kruskal-Wallis rank sum test).
+
+*Q4. Are there any significant associations between a country’s fulfillment of the 2019 carbon budget per person and year and their assigned income group?*
+
+Yes. There was a significant association between income group and carbon budget fulfillment (($\chi^2$)=76.97, df=3, p<.001, $\chi^2$-test for association). Low income countries emitted under the carbon budget per capita and year until 2050 much more than expected (obs. 19, exp. ~6). High income countries emitted under the carbon budget less than expected (obs. 0, exp. 12). Upper middle income countries emitted under the carbon budget less than expected (obs. 3, exp. ~11) whereas lower middle income countries emitted under the carbon budget more than expected (obs. 21, exp. ~11). Low income countries emitted over the carbon budget less than expected (obs. 9, exp. ~22), so did lower middle income countries (obs. 32, exp. ~42). High income countries (obs. 57, exp. ~45) and upper middle income countries (obs. 52, exp. ~41) both emitted over the carbon budget more than expected.
